Integra Gestão Escolar ao modelo compartilhado